k8s/deployment-config.yml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: nginx-proxy
#   namespace: smp-dev
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: nginx-proxy
#   template:
#     metadata:
#       labels:
#         app: nginx-proxy
#     spec:
#       imagePullSecrets:
#         - name: regcred-repo-rk    
#       containers:
#         - name: nginx-proxy
#           image: nexusrepo.client.org/smp/client/singhai-be/be-proxy:v3
#           ports:
#             - containerPort: 80
#               protocol: TCP
#           resources: {}
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-proxy
#   namespace: smp-dev
# spec:
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80
#   selector:
#     app: nginx-proxy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigw-proxy
  namespace: smp-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigw-proxy
  template:
    metadata:
      labels:
        app: apigw-proxy
    spec:
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf   
      containers:      
        - name: demo
          image: nginx
          resources: {}
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true            
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: smpgw-proxy
  namespace: smp-client
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: apigw-proxy
