k8s/ingress-nat-vm.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-vm-mongodb-service
  namespace: rikkei-vm
spec:
  ports:
  - protocol: TCP
    port: 38128 # Port mà Service này sẽ lắng nghe
    targetPort: 27017 # Port của máy ảo bạn muốn chuyển tiếp đến
  type: ClusterIP
  externalIPs:
  - 10.20.23.228 # Địa chỉ IP của máy ảo trong mạng nội bộ
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vm-ingress
  namespace: rikkei-vm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / # Tùy chỉnh lại nếu cần
spec:
  rules:
  - http:
      paths:
      - path: /vm-path # Đường dẫn mà bạn muốn chuyển tiếp
        pathType: Prefix
        backend:
          service:
            name: external-vm-mongodb-service
            port:
              number: 38128
---
