k8s/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: s22nbaeqxeca-dev
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: s22nbaeqxeca-dev
spec:
  selector:
    app: nginx
  ports:
  - port: 8080
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: s22nbaeqxeca-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    name: myingress
spec:
  rules:
  - host: xeca.synodus.us
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx
            port: 
              number: 8080
