k8s/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: s23daarcarctx-stag
spec:
  type: ExternalName
  externalName: apigw-service-dev-svc.s23daarcarctx-dev.svc.cluster.local
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigw-service-stag-ingress
  namespace: s23daarcarctx-stag
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/client_body_buffer_size: 100M
    nginx.ingress.kubernetes.io/client_header_buffer_size: 100M
    nginx.ingress.kubernetes.io/client_max_body_size: 128M
    nginx.ingress.kubernetes.io/large_client_header_buffers: 8 512k
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 256k
    nginx.ingress.kubernetes.io/proxy-buffers-number: '4'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-real-ip-header: x-forwarded-for
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
    nginx.ingress.kubernetes.io/server_names_hash_bucket_size: '128'
spec:
  tls:
    - hosts:
        - arctx-stag-apigw.aequitas.dev
      secretName: arctx-stag-apigw.aequitas.dev
  rules:
    - host: arctx-stag-apigw.aequitas.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apigw-service-stag-svc
                port:
                  number: 8080
